2005-07-11  Vlad Seryakov  <seryakov@users.sf.net>

	* include/ns.h:
	* nsd/fastpath.c:
	* nsd/return.c:
	* nsd/connio.c: Refactored chunked support to use Ns_connClose 
	to send the last zero chunk. This makes chunked support universal and
	can be used in adp as well.

2005-07-08  Vlad Seryakov  <seryakov@users.sf.net>

	* include/ns.h:
	* nsd/fastpath.c:
	* nsd/return.c:
	* nsd/connio.c:
	* nsd/conn.c: Added support for chunked encoding using conn flag
	NS_CONN_CHUNKED. Once set, output routines (Ns_ConnReturnOpenFd|File|Channel and
        Ns_ReturnData) will perform chunked encoding automatically instead of
        raw data output. From Tcl ns_conn chunked command is available and
	if called with third parameter 0 or 1 can set/unset conn flag.

2005-07-08  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/nsd.h:
	* nsd/fastpath.c:
	* tests/http_byteranges.test: Implemented full byte ranges
	support including If-Range and multiple ranges. Supports
	mmap and return from fd modes.

	* nsd/fastpath.c: 
        * tests/http_byteranges.test: Updated to return correct 
        Content-length header.

	* include/ns.h:
	* nsd/fastpath.c:
	* nsd/connio.c: Introducing NS_CONN_MAXBUFS parameters which is set
	to 16 by default. It defines how many iov buffers Ns_ConnSend can to use
	simultaneously and max number of ranges nsd supports which is 
	NS_CONN_MAXBUFS/3

2005-07-06  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/tclinit.c:
	* nsthread/tls.c: Moved call to Tcl_FinalizeThread to end of TLS
	cleanup to better catch any cases of Tcl being used outside
	expected interfaces.

	* nsd/tclcmds.c: Alphabetize list of Tcl commands.

	* nsd/return.c: Clean up some string buffer usage.

	* include/ns.h:
	* nsd/driver.c:
	* nsd/binder.c: Add backlog arg to Ns_SockListenUnix().

	* nsd/binder.c:
	* nsd/driver.c: Localize Windows ifdefs as much as possible.

	* nsd/connio.c:
	* nsd/queue.c:
	* nsd/return.c:
	* nsd/driver.c:
	* nsd/server.c:
	* nsd/nsd.h:
	* nsd/nsconf.c: