@@ -1,0 +1,5 @@
+ns_conn chunked 1
+
+ns_return 200 text/plain "<BODY>this is a test</BODY>"
+
+
